# modeling_and_interpreting_customer_churn

./: .gitignore  .pre-commit-config.yaml  .pre-commit-ignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
customer_churn_prediction/: __init__.py  dataset.py  features.py  plots.py
customer_churn_prediction/data/: make_dataset.py
customer_churn_prediction/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: data_checks.py
tests/: test_data.py
